did some more work

--- a/Week-01-Pandas/Exercise-MHB.ipynb
+++ b/Week-01-Pandas/Exercise-MHB.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
        "4               3.44                               1               340  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
        "22778"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "10473"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,33 +343,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "host_name\n",
+       "Michael    387\n",
+       "David      348\n",
+       "John       270\n",
+       "Daniel     253\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 4. Using `.isin()` select anyone that has the host name of Michael, David, John, and Daniel.\n",
     "# How many total are there that have those names\n",
+    "names = ['Michael', 'David', 'John', 'Daniel']\n",
+    "c4 = df['host_name'].isin(names)\n",
+    "df[c4][\"host_name\"].value_counts()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 98,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>price</th>\n",
+       "      <th>adjusted_price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>109</td>\n",
+       "      <td>209</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>299</td>\n",
+       "      <td>399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>131</td>\n",
+       "      <td>231</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>175</td>\n",
+       "      <td>275</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>80</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46484</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>250</td>\n",
+       "      <td>350</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46489</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>464</td>\n",
+       "      <td>564</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46493</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>100</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46513</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>180</td>\n",
+       "      <td>280</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46517</th>\n",
+       "      <td>Williamsburg</td>\n",
+       "      <td>55</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3486 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      neighbourhood  price  adjusted_price\n",
+       "11     Williamsburg    109             209\n",
+       "15     Williamsburg    299             399\n",
+       "35     Williamsburg    131             231\n",
+       "38     Williamsburg    175             275\n",
+       "42     Williamsburg     80             180\n",
+       "...             ...    ...             ...\n",
+       "46484  Williamsburg    250             350\n",
+       "46489  Williamsburg    464             564\n",
+       "46493  Williamsburg    100             200\n",
+       "46513  Williamsburg    180             280\n",
+       "46517  Williamsburg     55             155\n",
+       "\n",
+       "[3486 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 5. Create a new column called `adjusted_price` that has $100 added to every listing in Williamsburg.  \n",
     "# The prices for all other listings should be the same as the were before. \n",
+    "c5 = df['neighbourhood'] == 'Williamsburg'\n",
+    "df['adjusted_price'] = np.where(c5, df['price'] + 100, df['price'])\n",
+    "df[c5][[\"neighbourhood\", \"price\", \"adjusted_price\"]]\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 113,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "room_type\n",
+       "Private room       0.510901\n",
+       "Entire home/apt    0.479059\n",
+       "Shared room        0.009180\n",
+       "Hotel room         0.000861\n",
+       "Name: proportion, dtype: float64"
+      ]
+     },
+     "execution_count": 113,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 6. What % of the rooms are private, and what % of the rooms are shared.  \n",
+    "\n",
+    "df[c5][\"room_type\"].value_counts(normalize=True)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
@@ -398,33 +566,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 124,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neighbourhood_group\n",
+       "Bronx             1183\n",
+       "Brooklyn         18632\n",
+       "Manhattan        20580\n",
+       "Queens            5791\n",
+       "Staten Island      341\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1. Using `groupby`, count how many listings are in each neighbourhood_group.\n",
+    "gb1 = df.groupby('neighbourhood_group')\n",
+    "gb1.size()\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "neighbourhood_group\n",
+       "Bronx             92.751479\n",
+       "Brooklyn         120.225258\n",
+       "Manhattan        191.880466\n",
+       "Queens            99.754965\n",
+       "Staten Island    110.947214\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Using `groupby`, find the mean price for each of the neighbourhood_groups. \n",
+    "gb1['price'].mean()\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "room_type\n",
+       "Entire home/apt    199.395950\n",
+       "Hotel room         275.015075\n",
+       "Private room        91.453084\n",
+       "Shared room         87.063830\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2.5. Using `groupby`, find the mean price for each room_type. \n"
+    "# 2.5. Using `groupby`, find the mean price for each room_type. \n",
+    "gb2 = df.groupby('room_type')\n",
+    "gb2['price'].mean()\n"
    ]
   },
   {
