--- a/Week-02-DS-Overview-and-Data/Exercise-MHB.ipynb
+++ b/Week-02-DS-Overview-and-Data/Exercise-MHB.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[8 rows x 47 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -509,6 +509,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_food.drop(labels=None, *, axis=0, index=None, columns=None, level=None, inplace=False, errors='raise')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -517,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -635,15 +644,15 @@
        "[125 rows x 3 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Remove ‘em.\n",
-    "new_df = df_food[[\"calories_day\", \"weight\", \"Gender\"]]\n",
-    "new_df\n"
+    "df = df_food[[\"calories_day\", \"weight\", \"Gender\"]]\n",
+    "df\n"
    ]
   },
   {
@@ -655,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -667,14 +676,14 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Count ‘em.\n",
-    "new_df.isnull().sum()\n",
+    "df.isnull().sum()\n",
     "\n"
    ]
   },
@@ -687,9 +696,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8j/js3zm0p13bd4nzs0sfl0cqvc0000gn/T/ipykernel_75178/968794264.py:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df.dropna(inplace=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Drop ‘em.\n",
+    "\n",
+    "df.dropna(inplace=True)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But what about the weird non-numeric values in the column obviously meant for numeric data?\n",
+    "\n",
+    "Notice the data type of that column from when you got the types of all the columns?\n",
+    "\n",
+    "If only we could convert the column to a numeric type and drop the rows with invalid values. 🤔"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/8j/js3zm0p13bd4nzs0sfl0cqvc0000gn/T/ipykernel_75178/1977055360.py:9: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  df['weight'] =  pd.to_numeric(df['weight'])\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -724,18 +780,6 @@
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>I'm not answering this.</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>Not sure, 240</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2.0</td>\n",
        "      <td>190</td>\n",
@@ -745,6 +789,18 @@
        "      <th>5</th>\n",
        "      <td>3.0</td>\n",
        "      <td>190</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>180</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>137</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -785,55 +841,44 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>104 rows × 3 columns</p>\n",
+       "<p>101 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     calories_day                    weight  Gender\n",
-       "1             3.0                       155       1\n",
-       "2             4.0  I'm not answering this.        1\n",
-       "3             3.0             Not sure, 240       1\n",
-       "4             2.0                       190       1\n",
-       "5             3.0                       190       1\n",
-       "..            ...                       ...     ...\n",
-       "118           3.0                       140       1\n",
-       "119           3.0                       185       2\n",
-       "120           4.0                       156       1\n",
-       "121           2.0                       180       1\n",
-       "123           4.0                       135       2\n",
+       "     calories_day  weight  Gender\n",
+       "1             3.0     155       1\n",
+       "4             2.0     190       1\n",
+       "5             3.0     190       1\n",
+       "6             3.0     180       2\n",
+       "7             3.0     137       1\n",
+       "..            ...     ...     ...\n",
+       "118           3.0     140       1\n",
+       "119           3.0     185       2\n",
+       "120           4.0     156       1\n",
+       "121           2.0     180       1\n",
+       "123           4.0     135       2\n",
        "\n",
-       "[104 rows x 3 columns]"
+       "[101 rows x 3 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop ‘em.\n",
-    "new_df.dropna()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "But what about the weird non-numeric values in the column obviously meant for numeric data?\n",
+    "#Fix that.\n",
     "\n",
-    "Notice the data type of that column from when you got the types of all the columns?\n",
+    "for index, i in df['weight'].items():\n",
+    "    if not str(i).isnumeric():\n",
+    "        df.drop(index= index, inplace=True)\n",
     "\n",
-    "If only we could convert the column to a numeric type and drop the rows with invalid values. 🤔"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fix that.\n",
+    "    \n",
+    "\n",
+    "df['weight'] =  pd.to_numeric(df['weight'])\n",
+    "\n",
+    "df.head(101)\n",
+    "\n",
     "\n"
    ]
   },
@@ -853,6 +898,7 @@
    "outputs": [],
    "source": [
     "# Savey save!\n",
+    "df.to_csv('data/saved_data.csv')\n",
     "\n"
    ]
   },
